# pdf-decode

./: .gitignore  Makefile  README.md  pyproject.toml
src/: image-decode.py  image-extract.py  pdf-decode.py
test/: test.bat
