
[tool.poetry]
name = "pdf-decode"
version = "0.1.0"
description = "Decodificador de PDFs y extractor de texto"
authors = ["Francisco Rivera <elpacko@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
PyPDF2 = "^3.0.1"
click = "^8.1.7"
pytest-isort = "^4.0.0"
isort = "^5.13.2"
black = "^24.8.0"
flake8 = "^7.1.1"
textract = "^1.6.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
